...
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ownerIconView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxHeight="250dp"
                android:adjustViewBounds="true"
                android:layout_marginVertical="16dp"
                android:layout_weight="1"
...
